--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,4 @@
-app:
-    resource: @AppBundle/Controller/
-    type:     annotation
+almos_homepage:
+    resource: "@AlmosBundle/Resources/config/routing.yml"
+    prefix:   /
+
