--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
+    - { resource: @AlmosBundle/Resources/config/config.yml }
 
 framework:
     #esi:             ~
@@ -71,3 +72,5 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+   # encryption: "%mailer_encryption%"
+   # auth_mode:  "%mailer_auth_mode%"
