--- a/src/AlmosBundle/Resources/config/routing.yml
+++ b/src/AlmosBundle/Resources/config/routing.yml
@@ -16,3 +16,11 @@ AlmosBundle_contact:
     defaults: { _controller: AlmosBundle:Page:contact }
     requirements:
            _method:  GET|POST
+
+
+AlmosBundle_question_show:
+    pattern:  /{id}
+    defaults: { _controller: AlmosBundle:Question:show }
+    requirements:
+        _method:  GET
+        id: \d+
