Create comments form.

--- a/src/AlmosBundle/Resources/config/routing.yml
+++ b/src/AlmosBundle/Resources/config/routing.yml
@@ -24,3 +24,11 @@ AlmosBundle_question_show:
     requirements:
         _method:  GET
         id: \d+
+
+
+AlmosBundle_comment_create:
+    pattern:  /comment/{blog_id}
+    defaults: { _controller: AlmosBundle:Comment:create }
+    requirements:
+        _method:  POST
+        blog_id: \d+
